--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mongraph",
   "description": "Mongraph combines documentstorage database with graph-database relationships",
   "version": "0.1.5",
-  "author": "Philipp Staender",
+  "author": "Philipp Staender <philipp.staender@gmail.com>",
   "homepage": "https://github.com/pstaender/mongraph/",
   "main": "./lib/mongraph",
   "repository": {
