fix: process part is now needed for detecting paths

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "graphdatabase"
   ],
   "scripts": {
-    "test": "coffee -cb test src && mocha; npm run clean",
+    "test": "coffee --map -cb test src && mocha; npm run clean",
     "clean": "find src test -name '*.js' -delete -o -name '*.map' -delete",
     "build": "npm run clean && coffee -cbo lib src",
     "example": "coffee -cbo lib src && node examples/example.js",
