--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongraph",
   "description": "Mongraph combines documentstorage-database with graph-database relationships",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "author": "Philipp Staender <philipp.staender@gmail.com>",
   "homepage": "https://github.com/pstaender/mongraph/",
   "main": "./lib/mongraph",
@@ -31,7 +31,8 @@
     "neo4j": "~0.2",
     "docco": "~0.6",
     "groc": "~0.4",
-    "source-map-support": "~0.1.2"
+    "source-map-support": "~0.1.2",
+    "coveralls": "latest"
   },
   "dependencies": {
     "underscore.string": "~2.3",
