--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "npm run clean && coffee -cbo lib src",
     "example": "coffee -cbo lib src && node examples/example.js",
     "documentation": "docco ./src/*.coffee",
-    "doc": "groc ./src/*.coffee README.md"
+    "doc": "groc ./src/*.coffee README.md",
+    "benchmark": "coffee benchmark/benchmark.coffee"
   },
   "devDependencies": {
     "mocha": "~1.9",
@@ -32,7 +33,11 @@
     "docco": "~0.6",
     "groc": "~0.4",
     "source-map-support": "~0.1.2",
-    "coveralls": "latest"
+    "coveralls": "latest",
+    "mongoskin": "latest",
+    "benchmark": "~1.0",
+    "microtime": "*",
+    "futures": "~2.3.1"
   },
   "dependencies": {
     "underscore.string": "~2.3",
@@ -41,6 +46,6 @@
     "bson": "~0.1.8"
   },
   "licenses" : {
-    "type" : "MIT"
+    "type" : "GPL"
   }
 }
