--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "graphdatabase"
   ],
   "scripts": {
-    "test": "coffee --map -cb test src && mocha; npm run clean",
-    "clean": "find src test -name '*.js' -delete -o -name '*.map' -delete",
-    "build": "npm run clean && coffee --map -cbo lib src",
-    "example": "coffee -cbo lib src && node examples/example.js",
+    "test": "coffee --map -cb test && mocha; npm run clean",
+    "clean": "find test -name '*.js' -delete -o -name '*.map' -delete",
     "documentation": "docco ./src/*.coffee",
     "doc": "groc ./src/*.coffee README.md",
     "benchmark": "coffee benchmark/benchmark.coffee"
