fixed ruby script and moved it to test folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
   - neo4j
 rvm:
   - 1.9.3
-before_install: ruby neo4j_services.rb install && sleep 2 && ruby neo4j_services.rb start && sleep 3
+before_install: ruby test/neo4j_services.rb install && sleep 2 && ruby test/neo4j_services.rb start && sleep 3
