--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongraph",
   "description": "Mongraph combines documentstorage-database with graph-database relationships",
-  "version": "0.1.18",
+  "version": "0.2.0",
   "author": "Philipp Staender <philipp.staender@gmail.com>",
   "homepage": "https://github.com/pstaender/mongraph/",
   "main": "./lib/mongraph",
@@ -16,37 +16,33 @@
     "graphdatabase"
   ],
   "scripts": {
-    "test": "./node_modules/coffee-script/bin/coffee --map -cb test src && mocha; npm run clean",
-    "clean": "find src test -name '*.js' -delete -o -name '*.map' -delete",
-    "build": "npm run clean && coffee --map -cbo lib src",
-    "example": "coffee -cbo lib src && node examples/example.js",
-    "documentation": "docco ./src/*.coffee",
-    "doc": "groc ./src/*.coffee README.md",
-    "benchmark": "coffee benchmark/benchmark.coffee",
-    "prepare": "npm run test && npm run build && npm run documentation && npm run doc"
+    "test": "node_modules/mocha/bin/mocha --globals=7010; node_modules/mocha/bin/mocha --globals=7012",
+    "build": "node_modules/coffee-script/bin/coffee --map -cbo lib src",
+    "example": "npm run build && node examples/example.js",
+    "documentation": "node_modules/docco/bin/docco ./src/*.coffee",
+    "prepare": "npm test && npm run build && npm run documentation && npm run doc"
   },
   "devDependencies": {
-    "mocha": "~1.9",
+    "mocha": "~2.2.5",
     "expect.js": "~0.2",
-    "should": "~1.2",
-    "mongoose": "~3.6",
-    "neo4j": "~0.2",
-    "docco": "~0.6",
-    "groc": "~0.4",
-    "source-map-support": "~0.1.2",
+    "should": "~6.0",
+    "mongoose": "~4.0",
+    "neo4j": "~1.1.1",
+    "docco": "~0.7",
     "coveralls": "latest",
     "mongoskin": "latest",
     "benchmark": "~1.0",
     "microtime": "*",
     "futures": "~2.3.1",
-    "request": "~2.21.0",
-    "coffee-script": "~1.6.3"
+    "request": "~2.55.0",
+    "coffee-script": "~1.9.2"
   },
   "dependencies": {
-    "underscore.string": "~2.3",
-    "underscore": "~1.4",
+    "bson": "~0.3.2",
     "join": "~2.3",
-    "bson": "~0.1.8"
+    "minimist": "^1.1.1",
+    "underscore": "~1.4",
+    "underscore.string": "~2.3"
   },
   "licenses": {
     "type": "GPL"
