--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 node_js:
+  - "0.12"
   - "0.11"
   - "0.10"
 services:
@@ -8,4 +9,4 @@ services:
 rvm:
   - 1.9.3
 before_install:
-  - ruby test/neo4j_services.rb install && sleep 2 && ruby test/neo4j_services.rb start && sleep 3
+  - ruby test/neo4j_services.rb install && ruby test/neo4j_services.rb start
